1.indx fix button改z-index

--- a/frontend/src/assets/Sass/pages/_index.scss
+++ b/frontend/src/assets/Sass/pages/_index.scss
@@ -162,7 +162,7 @@
       position: fixed;
       right: 0;
       bottom: 0;
-      z-index: 1000;
+      z-index: 900;
       div {
         position: relative;
         button {
